--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -1,16 +1,20 @@
 <h4>Formularios <small> template </small></h4>
 <hr>
-<form autocomplete="off">
+<form autocomplete="off"(ngSubmit)="toHold()" >
 
   <div>
 
     <div class="form-group row">
-      <label class="col-2 col-form-label">Nombre</label>
+      <label class="col-2 col-form-label">Name</label>
       <div class="col-8">
 
         <input class="form-control"
                type="text"
-               placeholder="Nombre">
+               name="Name"
+               ngModel
+               placeholder="Name"
+               required>
+               
       </div>
     </div>
 
@@ -42,7 +46,7 @@
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
       <button type="submit" class="btn btn-outline-primary btn-block">
-        Guardar
+        Save
       </button>
     </div>
   </div>
