--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -1,6 +1,6 @@
 <h4>Formularios <small> template </small></h4>
 <hr>
-<form autocomplete="off"(ngSubmit)="toHold()" >
+<form autocomplete="off"(ngSubmit)="toHold( form )" #form="ngForm" >
 
   <div>
 
@@ -11,7 +11,7 @@
         <input class="form-control"
                type="text"
                name="Name"
-               ngModel
+               [ngModel]="user.name"
                placeholder="Name"
                required>
                
