--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -8,35 +8,51 @@
       <label class="col-2 col-form-label">Name</label>
       <div class="col-8">
 
-        <input class="form-control"
+        <input class="form-control "
                type="text"
                name="Name"
+               [class.is-invalid]="nome.invalid && nome.touched"
                [ngModel]="user.name"
                placeholder="Name"
-               required>
+               required
+               minlength="3"
+               #nome="ngModel">
                
       </div>
     </div>
 
     <div class="form-group row">
-      <label class="col-2 col-form-label">Apellido</label>
+      <label class="col-2 col-form-label">Last Name</label>
       <div class="col-8">
 
         <input class="form-control"
                type="text"
-               placeholder="Apellido">
+               [class.is-invalid]="lastName.invalid && lastName.touched"
+               [ngModel]="user.lastName"
+               name="lastName" 
+               placeholder="Last name"
+               required
+               minlength="3"
+               #lastName="ngModel"
+            >
       </div>
     </div>
 
   </div>
 
   <div class="form-group row">
-    <label class="col-2 col-form-label">Correo</label>
+    <label class="col-2 col-form-label">E-mail</label>
     <div class="col-8">
 
       <input class="form-control"
              type="email"
-             placeholder="Correo electrónico">
+             [class.is-invalid]="email.invalid && email.touched"
+             [ngModel]="user.email"
+             name="Email"
+             placeholder="Correo electrónico"
+             required
+             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+             #email="ngModel">
     </div>
   </div>
 
