--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -70,6 +70,28 @@
   </div>
 
   <div class="form-group row">
+    <label class="col-2 col-form-label">Country</label>
+    <div class="col-8"></div>
+  </div>
+  <select class="form-control"
+        name="country"
+        [disabled]="countries.length === 0"
+        [class.is-invalid]="countryName.invalid && countryName.touched"
+        [ngModel]="user.country"
+        required
+        #countryName="ngModel">
+        <small
+        *ngIf="countryName.invalid && countryName.touched"
+        class="form-text text-danger"
+        >Country is required</small
+      >
+    <option *ngFor="let country of countries"
+            [value]="country.code">
+    {{country.name}}
+    </option>
+  </select>
+ 
+  <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
       <button type="submit" class="btn btn-outline-primary btn-block">
