Criação do formulário - FormGroup

--- a/src/app/reactive/reactive/reactive.component.html
+++ b/src/app/reactive/reactive/reactive.component.html
@@ -1,6 +1,6 @@
-w<h4>Formularios <small> Reactive </small></h4>
+<h4>Formularios <small> Reactive </small></h4>
 <hr>
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="form" (ngSubmit)="toHold()">
 
   <div>
 
