Criação do formulário.

--- a/src/app/reactive/reactive/reactive.component.html
+++ b/src/app/reactive/reactive/reactive.component.html
@@ -5,34 +5,37 @@
   <div>
 
     <div class="form-group row">
-      <label class="col-2 col-form-label">Nombre</label>
+      <label class="col-2 col-form-label">Name</label>
       <div class="col-8">
 
         <input class="form-control"
                type="text"
-               placeholder="Nombre">
+               placeholder="Name"
+               formControlName="name">
       </div>
     </div>
 
     <div class="form-group row">
-      <label class="col-2 col-form-label">Apellido</label>
+      <label class="col-2 col-form-label">Last name</label>
       <div class="col-8">
 
         <input class="form-control"
                type="text"
-               placeholder="Apellido">
+               placeholder="lastName"
+               formControlName="lastName">
       </div>
     </div>
 
   </div>
 
   <div class="form-group row">
-    <label class="col-2 col-form-label">Correo</label>
+    <label class="col-2 col-form-label">E-mail</label>
     <div class="col-8">
 
       <input class="form-control"
              type="email"
-             placeholder="Correo electrónico">
+             placeholder="Email"
+             formControlName="email">
     </div>
   </div>
 
