--- a/src/app/reactive/reactive/reactive.component.html
+++ b/src/app/reactive/reactive/reactive.component.html
@@ -51,3 +51,15 @@
   </div>
 
 </form>
+
+<hr>
+<pre>
+  Form status: {{form.valid}}
+  <hr>
+  Status: {{form.status}}
+</pre>
+
+<pre>
+  {{form.value | json }}
+</pre>
+
