--- a/src/app/reactive/reactive/reactive.component.html
+++ b/src/app/reactive/reactive/reactive.component.html
@@ -1,45 +1,58 @@
 <h4>Formularios <small> Reactive </small></h4>
-<hr>
+<hr />
 <form autocomplete="off" [formGroup]="form" (ngSubmit)="toHold()">
-
   <div>
-
     <div class="form-group row">
       <label class="col-2 col-form-label">Name</label>
       <div class="col-8">
+        <input
+          class="form-control"
+          type="text"
+          placeholder="Name"
+          formControlName="name"
+          [class.is-invalid]="invalidName"
+        />
 
-        <input class="form-control"
-               type="text"
-               placeholder="Name"
-               formControlName="name">
+        <small *ngIf="invalidName" class="form-text text-danger"
+          >Name is required</small
+        >
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Last name</label>
       <div class="col-8">
+        <input
+          class="form-control"
+          type="text"
+          placeholder="lastName"
+          formControlName="lastName"
+          [class.is-invalid]="invalidLastName"
+        />
 
-        <input class="form-control"
-               type="text"
-               placeholder="lastName"
-               formControlName="lastName">
+        <small *ngIf="invalidLastName" class="form-text text-danger"
+          >Last name is required</small
+        >
       </div>
     </div>
-
   </div>
 
   <div class="form-group row">
     <label class="col-2 col-form-label">E-mail</label>
     <div class="col-8">
+      <input
+        class="form-control"
+        type="email"
+        placeholder="Email"
+        formControlName="email"
+        [class.is-invalid]="invalidEmail"
+      />
 
-      <input class="form-control"
-             type="email"
-             placeholder="Email"
-             formControlName="email">
+      <small *ngIf="invalidEmail" class="form-text text-danger"
+        >Email is required</small
+      >
     </div>
   </div>
-
-
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
@@ -49,10 +62,9 @@
       </button>
     </div>
   </div>
-
 </form>
 
-<hr>
+<hr />
 <pre>
   Form status: {{form.valid}}
   <hr>
@@ -60,6 +72,5 @@
 </pre>
 
 <pre>
-  {{form.value | json }}
+  {{ form.value | json }}
 </pre>
-
