Validação de senhas

--- a/src/app/reactive/reactive/reactive.component.html
+++ b/src/app/reactive/reactive/reactive.component.html
@@ -54,6 +54,33 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Password</label>
+    <div class="col">
+      <input
+        class="form-control"
+        type="password"
+        placeholder="Password"
+        formControlName="pass1"
+        [class.is-invalid]="invalidPass1"
+      />
+    </div>
+  </div>
+
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Reprat password</label>
+    <div class="col">
+      <input
+        class="form-control"
+        type="password"
+        placeholder="Repeat password"
+        formControlName="pass2"
+        [class.is-invalid]="invalidPass2"
+      />
+    </div>
+  </div>
+
   <div class="form-group row" formGroupName="adress">
     <label class="col-2 col-form-label">Adress</label>
     <div class="row-form col">
@@ -96,17 +123,22 @@
               <input class="form-control" type="text" [formControlName]="i" />
             </td>
             <td>
-              <button class="btn btn-danger"
-                      (click)="deleteHobby(i)">Delete</button>
+              <button class="btn btn-danger" (click)="deleteHobby(i)">
+                Delete
+              </button>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
 
-    <button class="btn btn-primary btn-block"
-            type="button"
-            (click)="addHobby()">Add</button>
+    <button
+      class="btn btn-primary btn-block"
+      type="button"
+      (click)="addHobby()"
+    >
+      Add
+    </button>
   </div>
 
   <div class="form-group row">
