--- a/src/app/reactive/reactive/reactive.component.html
+++ b/src/app/reactive/reactive/reactive.component.html
@@ -20,6 +20,23 @@
     </div>
 
     <div class="form-group row">
+      <label class="col-2 col-form-label">User</label>
+      <div class="col">
+        <input
+          class="form-control"
+          type="text"
+          placeholder="User name"
+          formControlName="user"
+          [class.is-invalid]="invalidUser"
+        />
+
+        <small *ngIf="invalidUser" class="form-text text-danger"
+          >This user exists</small
+        >
+      </div>
+    </div>
+
+    <div class="form-group row">
       <label class="col-2 col-form-label">Last name</label>
       <div class="col">
         <input
